Add as4, generator, parallelism